--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,8 +20,7 @@ jobs:
 
       - name: Copy Artifact
         run: |
-          mkdir build/
-          docker cp build-container:/usr/bin/server-manager ./build/
+          docker cp build-container:/build .
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
